# ShenQi

./: .gitignore  LICENSE  README.md
src/arduino/: test_reed.ino
src/arduino/Hbot/: Hbot.ino
src/arduino/Stepper_SerialFinal/: Stepper_SerialFinal.ino
src/arduino/main/: main.ino
src/arduino/reed_switch/: reed_switch.ino
src/arduino/test_reed/: test_reed.ino
src/chess_msgs/: CMakeLists.txt  package.xml
src/chess_msgs/action/: LobbyRequest.action  MovePiece.action  QuickMatch.action  Rematch.action  WaitCmd.action  WaitReady.action
src/chess_msgs/msg/: GameCmd.msg  Grid.msg  Movement.msg  PlayerInfo.msg  UIin.msg  UIout.msg
src/chess_msgs/srv/: SendCmd.srv  ServerInfo.srv
src/chess_server/: CMakeLists.txt  package.xml  setup.py
src/chess_server/src/: server_node
src/chessboard/: CMakeLists.txt  package.xml  setup.py
src/chessboard/launch/: board.launch  test.launch  two_boards.launch
src/chessboard/src/: Astar.py  Board.py  UI_node  credential.py  game_node  move_piece_server  sensor_node  server_node  test_move_piece  test_node
