<?xml version="1.0"?>
<package format="2">
  <name>chessboard</name>
  <version>0.0.0</version>
  <description>The chessboard package</description>

  <maintainer email="kevinskwk@gmail.com">kevinskwk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>chess_msgs</build_depend>
  <build_export_depend>chess_msgs</build_export_depend>
  <exec_depend>chess_msgs</exec_depend>
  <build_depend>actionlib</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <exec_depend>actionlib</exec_depend>

</package>
